--- a/Class-01/index.html
+++ b/Class-01/index.html
@@ -4,106 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kashif Ali</title>
+    <title>Story</title>
 </head>
 
 <body>
-    <h1 id="top">Film Folk</h1>
-
-    <h2>Festival Diary</h2>
-    <p>Here are some of the film festivals we will be attending this year. <br />
-        Please <a style="text-decoration: none;" href="mailto:kashifalismitofficial@gmail.com">contact</a> us if you would like more information.
-    </p>
-
-    <h3>January</h3>
-
-    <p><a style="text-decoration: none;" href="https://www.sundance.org/" target="_blank">Sundance Film Festival</a><br />
-        Park City, Utah, USA<br />
-        20 - 30 January 2011
-    </p>
-
-    <h3>February</h3>
-    <p><a style="text-decoration: none;" href="http://www.tropfest.com/" target="_blank">Tropfest </a><br />
-        Sydney, Australia<br />
-        20 February 2011
-    </p>
-
-    <h3>March</h3>
-    <p><a style="text-decoration: none;" href="http://sxsw.com/" target="_blank">South by Southwest</a><br />
-        Austin, Texas, USA<br />
-        11 - 20 March 2011
-    </p>
-
-    <h3> April</h3>
-    <p><a style="text-decoration: none;" href="https://liff.org/" target="_blank">London Independent Film Festival</a><br />
-        London, UK<br />
-        15 - 24 April 2011
-    </p>
-
-    <h3>May</h3>
-    <p><a style="text-decoration: none;" href="https://liff.org/" target="_blank">Cannes International Film Festival</a><br />
-        Cannes, France<br />
-        11 - 22 May 2011
-    </p>
-
-    <h3>June</h3>
-    <p><a style="text-decoration: none;" href="https://liff.org/" target="_blank">Sydney Film Festival</a><br />
-        Sydney, Australia<br />
-        8 - 19 June 2011
-    </p>
-
-    <h3>July</h3>
-    <p><a style="text-decoration: none;" href="https://www.miff.com.au/" target="_blank">Melbourne International Film Festival</a><br />
-        Melbourne, Victoria, Australia <br />
-        22 July - 7 August 2011
-    </p>
-
-    <h3>August</h3>
-    <p><a style="text-decoration: none;" href="https://www.nziff.co.nz/2025/nau-mai-haere-mai/" target="_blank">New Zealand International Film Festival</a><br />
-        Dunedin, New Zealand<br />
-        4 - 25 August 2011
-    </p>
-
-    <h3>September</h3>
-    <p><a style="text-decoration: none;" href="https://liff.org/" target="_blank">London Independent Film Festival</a><br />
-        London, UK<br />
-        15 - 24 April 2011
-    </p>
-
-    <h3>October</h3>
-    <p><a style="text-decoration: none;" href="https://whatson.bfi.org.uk/Online/default.asp" target="_blank">London Film Festival</a><br />
-        London, UK <br />
-        12 - 27 October 2011
-    </p>
-
-    <h3>November</h3>
-    <p><a style="text-decoration: none;" href="https://www.idfa.nl/industry.aspx" target="_blank">International Documentary Film Festival Amsterdam (IDFA)</a><br />
-        Amsterdam, Netherlands<br />
-        16 - 27 November 2011
-    </p>
-
-    <h3>December</h3>
-    <p><a style="text-decoration: none;" href="https://www.whistlerfilmfestival.com/" target="_blank">Whistler Film Festival</a><br />
-        Whistler, BC, Canada <br>
-        30 November - 4 December 2011
-    </p>
-
-
-    <button type="button"><a style="text-decoration: none;" href="./about.html" target="_blank">About Film Folk</a></button>
-
-    <h3><a style="text-decoration: none;" href="#top">Top of Page</a></h3>
-
-
-
-
-
-
-
-
-
-
-
-
+    <h1>This is the Main Heading</h1>
+ <p>This text might be an introduction to the rest of
+ the page. And if the page is a long one it might
+ be split up into several sub-headings.<p>
+ <h2>This is a Sub-Heading</h2>
+ <p>Many long articles have sub-headings so to help
+ you follow the structure of what is being written.
+ There may even be sub-sub-headings (or lower-level
+ headings).</p>
+ <h2>Another Sub-Heading</h2>
+ <p>Here you can see another sub-heading.</p>
 </body>
 
 </html>
