--- a/Class-05/index.html
+++ b/Class-05/index.html
@@ -1,11 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Images</title>
+    <style>
+        .tble,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .cnter {
+            text-align: center;
+        }
+
+        .center {
+            margin-left: auto;
+            margin-right: auto;
+            padding-bottom: 50px;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <h1 class="cnter">Table One</h1>
+    <table class="tble center" width="600px">
+        <thead>
+            <tr>
+                <td rowspan="2" width="100px"></td>
+                <th colspan="2">Average</th>
+                <th rowspan="2">Red Eyes</th>
+
+            </tr>
+            <tr>
+
+                <th>height</th>
+                <th>weight</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <th>Males</th>
+                <td>1.9</td>
+                <td>0.003</td>
+                <td>40%</td>
+            </tr>
+
+            <tr>
+                <th>Females</th>
+                <td>1.7</td>
+                <td>0.002</td>
+                <td>43%</td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- <<<<<<<<<<<<<<<<<<<< Table Two >>>>>>>>>>>>>>>>>>>> -->
+
+
+    <h1 class="cnter">Table Two</h1>
+    <table class="tble center" width="600px">
+        <thead>
+            <tr>
+                <th colspan="6">Table</th>
+            </tr>
+            <tr>
+                <th rowspan="6">Hours</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Web</th>
+                <th>Thu</th>
+                <th>Fri</th>
+            </tr>
+        </thead>
+
+        <tbody>
+
+            <tr>
+                <td rowspan="6"></td>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>Arts</td>
+            </tr>
+            <tr>
+
+                <td>Social</td>
+                <td>History</td>
+                <td>Social</td>
+                <td>English</td>
+                <td>Sports</td>
+            </tr>
+            <th colspan="5">Lunch</th>
+            <tr>
+
+                <td>Social</td>
+                <td>History</td>
+                <td>Social</td>
+                <td>English</td>
+                <td rowspan="2">Projest</td>
+            </tr>
+            <tr>
+
+                <td>Social</td>
+                <td>History</td>
+                <td>Social</td>
+                <td>English</td>
+
+            </tr>
+        </tbody>
+
+    </table>
+
+
+
+    <!-- <<<<<<<<<<<<<<<<<<<< Table Three >>>>>>>>>>>>>>>>>>>> -->
+
+
+    <h1 class="cnter">Table Three</h1>
+    <table class="tble center btm;" width="600px">
+        <thead>
+
+            <tr>
+                <th rowspan="3">Day</th>
+                <th colspan="3 ">Seminar</th>
+            </tr>
+            <tr>
+                <th colspan="2">Schedule</th>
+                <th rowspan="3">Topic</th>
+            </tr>
+            <tr>
+                <th>Begin</th>
+                <th>End</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td rowspan="2 ">Monday</td>
+                <td rowspan="2">8:00 a.m</td>
+                <td rowspan="2">5:00 p.m</td>
+                <td>Introduction to XML</td>
+            </tr>
+            <tr>
+                <td>Validity DTD and Relax NG</td>
+            </tr>
+
+            <tr>
+                <td rowspan="3">Monday</td>
+                <td>8:00 a.m</td>
+                <td>11:00 p.m</td>
+                <td rowspan="1.5">X Path</td>
+            </tr>
+            <tr>
+
+                <td>11:00 a.m</td>
+                <td>02:00 p.m</td>
+
+            </tr>
+            <tr>
+
+                <td>11:00 a.m</td>
+                <td>02:00 p.m</td>
+                <td rowspan="1.5">XLS Transformation</td>
+            </tr>
+
+            <tr>
+                <td rowspan="2 ">Wednesday</td>
+                <td rowspan="2">8:00 a.m</td>
+                <td rowspan="2">12:00 p.m</td>
+                <td>Xls Formating Object</td>
+            </tr>
+        </tbody>
+    </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
