--- a/Form-Assigment/index.html
+++ b/Form-Assigment/index.html
@@ -36,14 +36,14 @@
             </label> <br /><br />
             <label for="textaria">
                 Coments <br>
-                <textarea rows="6" cols="38" name="comments" id="textaria"></textarea>
+                <textarea required rows="6" cols="38" name="comments" id="textaria"></textarea>
             </label>
             <br>
             <label for="">
                 <input type="checkbox" checked name="sign" value="singup">Sign me up for email updates
             </label>
             <br /><br />
-            <input type="button" value="submit review">
+            <input type="submit" value="submit review">
         </fieldset>
 
 
