readmefile links update

--- a/periodic-table/index.html
+++ b/periodic-table/index.html
@@ -35,15 +35,19 @@
                 text-align: center;
             }
         }
-        .text_color_green{
+
+        .text_color_green {
             color: green;
         }
-        .text_color_pink{
+
+        .text_color_pink {
             color: #B04444;
         }
-        .text_color_blue{
+
+        .text_color_blue {
             color: blue;
         }
+
         .none {
             border-style: none;
         }
@@ -87,7 +91,6 @@
         .burgend {
             background-color: #ECDCA9;
         }
-     
     </style>
 
 </head>
@@ -96,15 +99,15 @@
     <h1 id="first-heading" style="font-size:80px;">The Periodic Table</h1>
     <table id=First-One>
         <tr>
-            <td class="orang text_color_green" >1 <br />H</td>
-            <td class="none" colspan="16" ></td>
+            <td class="orang text_color_green">1 <br />H</td>
+            <td class="none" colspan="16"></td>
             <td class="gray text_color_green">2 <br /> He</td>
         </tr>
         <tr>
             <td class="purple">3<br />Li</td>
             <td class="sky">4<br />Be</td>
             <td class="none" colspan="10"></td>
-            <td  class="brown">5<br />B</td>
+            <td class="brown">5<br />B</td>
             <td class="orang ">6<br />C</td>
             <td class="orang text_color_green">7<br />N</td>
             <td class="orang text_color_green">8<br />O</td>
@@ -246,6 +249,9 @@
             <td class="halfwhite  text_color_pink">103<br />Lr</td>
         </tr>
     </table>
+    <br > <br />
+    <center>    <a id="first-heading" href="https://github.com/kashifaliawan" target="_blank">Kashif Ali</a>
+    </center>
 </body>
 
 </html>
