--- a/Vedio/index.html
+++ b/Vedio/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-  
+    <video poster="images/puppy.jpg" width="400" height="320" controls="controls">
+        <source src="https://www.htmlandcssbook.com/code-samples/chapter-09/video/puppy.mp4" type='video/mp4;
+ codecs="avc1.42E01E, mp4a.40.2"' />
+        <source src="video/puppy.webm" type='video/webm;
+ codecs="vp8, vorbis"' />
+        <div id="snow">
+            <p>You cannot see this video of a puppy playing
+                in the snow because this browser does not
+                support our video formats.</p>
+        </div>
+    </video>
 </body>
 
 </html>
